<resources>
    <string name="app_name">AboutMe</string>
    <string name="name">Jorge Guzman</string>
    <string name="yellow_star">Yellow star</string>
    <string name="bio">HOLA MI NOMBRE ES JORGE GUZMAN.
\n\nME ENCANTA LA PROGRAMACION.
\n\nEN ESTO MOMENTO ME ENCUENTRO INTERESADO POR LA TECNOLOGIA MOVIL
\n\nY ANDROID ES LO QUE ESTOY APRENDIENDO CON EL LENGUAJE KOTLIN
\n\nADEMAS TENGO CONOCIMIENTO EN OTRAS TECNOLOGIA COMO ES
\n\nASP.NET CORE, JAVA, C#, JAVASCRIPT
\n\nSQL SERVER ENTRE OTRAS MAS...
\n\nSI TE INTERESA COMPARTIR CONOCIMIENTO ME PUEDE ESCRIBIR
\n\nJORGEGUZMAN2210@GMAIL.COM - WS (849)-247-4425
\n\n PUEDE TAMBIEN VISITAR MI REPOSITORIO EN GIT.
\n\nHTTP://WWW.GITHUB.COM/JGUZMAN2210
\n\nAHI ENCONTRARA VARIAS COSA SOBRE DESARROLLO.
        \n\n</string>
    <string name="what_is_your_nickname">Cúal es su Nickname?</string>
    <string name="done">Hecho</string>
</resources>
